--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
+a {
+    text-decoration: none;
+    color: #ffffff;
+}
 
 .container {
     width: 100%;
@@ -40,6 +44,21 @@ header h1 {
     font-weight: 100;
     font-size: 45px;
 }
+
+#home img {
+    width: 45px;
+    height: 45px;
+    border: transparent;
+    border-radius: 30%;
+    position: fixed;
+    right: 1rem;
+    bottom: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+}
+
 form {
     width: 500px;
     display: flex;
@@ -82,5 +101,17 @@ form {
     font-weight: 100;
     color: rgb(51, 50, 50);
     cursor: pointer;
+}
+
+footer {
+    margin: auto;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    font-size: 10px;
+}
+footer h1{
+    text-shadow: 2px 2px 15px black;
+    font-style: oblique;
 }
 
